--- a/.env
+++ b/.env
@@ -1,33 +1,5 @@
-SECRET_KEY=your-secret-key-here
-DEBUG=True
+# Environment variables for the project
+# Add sensitive keys and configuration here
+# Example: DATABASE_URL=postgres://user:password@host:port/dbname
 
-# Database settings (Neon PostgreSQL)
-DATABASE_URL=postgresql://neondb_owner:npg_2aQMhOupjED6@ep-wild-rice-a1y6cqi6-pooler.ap-southeast-1.aws.neon.tech/djangoDB?sslmode=require
-
-# Legacy database settings (for reference or backup)
-# DATABASE_NAME=universidad
-# DATABASE_USER=postgres
-# DATABASE_PASSWORD=postgres
-# DATABASE_HOST=localhost
-# DATABASE_PORT=5432
-
-# Email settings
-EMAIL_BACKEND=django.core.mail.backends.smtp.EmailBackend
-EMAIL_HOST=smtp.gmail.com
-EMAIL_PORT=587
-EMAIL_USE_TLS=True
-EMAIL_HOST_USER=your-email@gmail.com
-EMAIL_HOST_PASSWORD=your-email-password
-
-# AWS S3 settings (optional, for production file storage)
-# AWS_ACCESS_KEY_ID=your-access-key
-# AWS_SECRET_ACCESS_KEY=your-secret-key
-# AWS_STORAGE_BUCKET_NAME=your-bucket-name
-# AWS_S3_REGION_NAME=your-region
-
-# Redis settings (for Channels and Celery)
-REDIS_URL=redis://localhost:6379/0
-
-# Celery settings
-CELERY_BROKER_URL=redis://localhost:6379/1
-CELERY_RESULT_BACKEND=redis://localhost:6379/1 
+GOOGLE_API_KEY=AIzaSyA-cxQVHQZ7b3271yV1o5Ey2TDvxG01fhM
