--- a/requirements.txt
+++ b/requirements.txt
@@ -25,3 +25,4 @@ celery==5.3.6
 flower==2.0.1
 dj-database-url==2.1.0 
 scikit-learn==1.6.1
+google-generativeai>=0.4.0 # Added for Gemini chatbot integration
